code/objects/GeoCode_Lookup__c.object
<CustomObject>
    <description>stored day for Geocode</description>
    <fields>
        <fullName>City__c</fullName>
        <description>City</description>
        <label>City</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <description>Latitude</description>
        <label>Latitude</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_for_OpenTable__c</fullName>
        <formula>&quot;lat=&quot; &amp; Latitude__c &amp; &quot;&amp;lng=&quot; &amp;  Longitude__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location for OpenTable</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <label>Longitude</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>state</description>
        <label>State</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timezone__c</fullName>
        <label>Timezone</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>GeoCodes</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>GeoCode Lookup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GeoCodes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>